<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Elektra Pagos</string>
    <string name="product_name">Producto de <b>Banco Azteca</b></string>
    <string name="app_version">V1.0.0</string>
    <string name="required_field_hint">Campo obligatorio*</string>
    <string name="optional_field_hint">Campo opcional</string>
    <string name="option_selection_hint">Selecciona una opción*</string>
    <string name="continue_button">CONTINUAR</string>
    <string name="invalid_data">*Dato no válido</string>
    <string name="email_not_matches">*Correos no coinciden</string>
    <string name="login_welcome">¡Bienvenido!</string>
    <string name="login_in_label">Inicia Sesión</string>
    <string name="login_in_header_label">Iniciar Sesión</string>
    <string name="login_face_label">Entrar con Reconocimiento Facial</string>
    <string name="login_pass_in_button">ENTRAR CON CONTRASEÑA</string>
    <string name="login_create_account"><u>Crear cuenta</u></string>
    <string name="login_finger_label">Entrar con Huella</string>
    <string name="login_hello">¡Hola,</string>
    <string name="login_insert_data">Ingresa tu contraseña</string>
    <string name="login_user_name">Usuario</string>
    <string name="login_user_pass">Contraseña</string>
    <string name="login_frgt_pass"> <u> Olvidé mi contraseña </u> </string>
    <string name="login_in_button">INGRESAR</string>
    <string name="login_finger_button">ENTRAR CON HUELLA</string>
    <string name="login_face_button">ENTRAR CON ROSTRO</string>
    <string name="create_account_header_label">Crear cuenta</string>
    <string name="fragment_create_account_hi">¡Hola!</string>
    <string name="fragment_create_account_insert_data">Ingresa tus datos completos</string>
    <string name="fragment_create_account_phone_number">Número celular</string>
    <string name="fragment_create_account_phone_hint">10 dígitos</string>
    <string name="fragment_create_account_invalid_phone">Ingrese un número válido</string>
    <string name="fragment_create_account_invalid_email">Ingrese un correo válido</string>
    <string name="fragment_create_account_not_matches_email">Correos no coinciden</string>
    <string name="fragment_create_account_email">Correo electrónico</string>
    <string name="fragment_create_account_email_hint">\\@</string>
    <string name="fragment_create_account_email_confirmation">Confirmación de correo electrónico</string>
    <string name="fragment_create_account_warning">Para acceder a los servicios de Elektra pagos, <b>Banco Azteca</b>\nte pide abrir una cuenta bancaria y los datos para ello.</string>
    <string name="verification_header_label">Código de verificación</string>
    <string name="fragment_verification_insert_code">Ingresa el código de verificación</string>
    <string name="fragment_verification_recieved">Recibiste un número de 5 dígitos por SMS</string>
    <string name="fragment_verification_resend_code"><u>Reenviar Código</u></string>
    <string name="fragment_verification_resend_code_count"><u>Reenviar Código en</u></string>
    <string name="invalid_sms_verification">Tu código es incorrecto, verifícalo\nnuevamente para continuar</string>
    <string name="form_header_label">Registro</string>
    <string name="fragment_form_complete">Completa tus datos</string>
    <string name="fragment_form_remind">Recuerda que estás abriendo una cuenta con\ndatos bancarios</string>
    <string name="fragment_form_name">Nombre</string>
    <string name="fragment_form_name_invalid">Inserte un nombre válido</string>
    <string name="fragment_form_paternal_last_name">Apellido paterno</string>
    <string name="fragment_form_lastname_invalid">Inserte un apellido válido</string>
    <string name="fragment_form_maternal_last_name">Apellido materno (opcional)</string>
    <string name="fragment_form_birth_date">Fecha de nacimiento</string>
    <string name="fragment_form_date_invalid">Ingrese una fecha válida</string>
    <string name="fragment_form_birth_date_hint">DD/MM/AAAA*</string>
    <string name="fragment_form_birth_site">Lugar de nacimiento</string>
    <string name="fragment_form_gender">Género</string>
    <string name="fragment_form_gender_woman">Mujer</string>
    <string name="fragment_form_gender_man">Hombre</string>
    <string name="fragment_form_postal_code">Código postal</string>
    <string name="fragment_form_postal_invalid">Inserte un código válido</string>
    <string name="fragment_form_colony">Colonia</string>
    <string name="fragment_form_colony_invalid">Inserte colonia válida</string>
    <string name="fragment_form_street">Calle</string>
    <string name="fragment_form_street_invalid">Ingrese calle válida</string>
    <string name="fragment_form_exterior_number">Número exterior</string>
    <string name="fragment_form_number_invalid">Ingrese número válido</string>
    <string name="fragment_form_interior_number">Número interior</string>
    <string name="fragment_form_town">Alcaldía o Municipio</string>
    <string name="fragment_form_state">Estado</string>
    <string name="fragment_form_country">País</string>
    <string name="fragment_terms_privacity"><u>Aviso de Privacidad</u></string>
    <string name="fragment_terms_banking"><u>Contrato de Banca</u></string>
    <string name="fragment_terms_terms_and_conditions"><u>Términos y condiciones</u></string>
    <string name="terms_and_conditions_header_label">Términos y condiciones</string>
    <string name="fragment_terms_credit_bureau"><u>Consultoría Buró de Crédito</u></string>
    <string name="fragment_terms_credimax"><u>Contrato CREDIMAX</u></string>
    <string name="fragment_terms_captation"><u>Contrato de Captación</u></string>
    <string name="fragment_terms_digital"><u>Contrato Somos Digital</u></string>
    <string name="fragment_terms_captation_products"><u>Contrato Productos de Captación</u></string>
    <string name="fragment_terms_have_readed"> He leído y acepto los términos y\ncondiciones y documentos antes\nmencionados.</string>
    <string name="create_password_header_label">Contraseña</string>
    <string name="fragment_create_password_create">Crea tu contraseña</string>
    <string name="fragment_create_password_password">Contraseña</string>
    <string name="fragment_create_password_password_confirmation">Confirmar contraseña</string>
    <string name="fragment_create_password_requeriments">Tu contraseña debe contener:</string>
    <string name="fragment_create_password_minimum">Mínimo 8 caracteres</string>
    <string name="fragment_create_password_maximum">Máximo 14 caracteres</string>
    <string name="fragment_create_password_consecutives">Sin caracteres consecutivos</string>
    <string name="fragment_create_password_repeated">Sin caracteres repetidos</string>
    <string name="fragment_create_password_bank_name">Diferente al nombre del banco</string>
    <string name="fragment_create_password_user_name">Diferente a tu nombre usuario</string>
    <string name="fragment_Create_password_no_match">Las contraseñas no coinciden</string>
    <string name="finger_header_label">Activar huella</string>
    <string name="face_header_label">Activar rostro</string>
    <string name="fragment_biometrics_activation_activate_finger">¿Te gustaría activar tu huella?</string>
    <string name="fragment_biometrics_activation_activate_face">¿Te gustaría activar tu rostro?</string>
    <string name="fragment_biometrics_activation_security_finger">Tu huella será tu clave de\nseguridad y contraseña</string>
    <string name="fragment_biometrics_activation_security_face">Tu rostro será tu clave de\nseguridad y contraseña</string>
    <string name="fragment_biometrics_activation_finger">Toca el ícono para activar\ntu huella dactilar</string>
    <string name="fragment_biometrics_activation_face">Toca el ícono para activar\nel reconocimiento facial</string>
    <string name="fragment_biometrics_activation_later"><u tools:ignore="Typos">En otro momento</u></string>
    <string name="fragment_successful_message">Tu cuenta se ha\ncreado con éxito</string>
    <string name="fragment_successful_message2">Ya puedes hacer uso de tu Wallet</string>
    <string name="fragment_successful_back_button">IR AL INICIO</string>
    <string name="forgotten_header_label">Olvidé mi contraseña</string>
    <string name="forgotten_insert_data">Ingresa el número celular que registraste</string>
    <string name="forgotten_insert_phone">Número celular</string>
    <string name="forgotten_send_button">ENVIAR</string>
    <string name="forgotten_insert_key">Ingresa la clave de autorización</string>
    <string name="forgotten_auth_button">AUTORIZAR OPERACIÓN</string>
    <string name="forgotten_insert_new_pass_header_label">Nueva contraseña</string>
    <string name="forggoten_insert_new_label">Ingresa tu nueva contraseña</string>
    <string name="forggoten_insert_new_pass">Nueva contraseña</string>
    <string name="forgotten_confirmation_pass">Confirmar contraseña</string>
    <string name="forgotten_resend_code"><u>Reenviar Código</u></string>
    <string name="forgotten_change_successful">Tu contraseña se ha\ncambiado con éxito</string>
    <string name="forgotten_login_label">Podrás iniciar sesión en el momento\nque lo desees.</string>
    <string name="forgotten_successful_back_button">IR AL INICIO</string>
    <string name="home_hello">¡Hola</string>
    <string name="home_balances">Saldos y\nmovimientos</string>
    <string name="home_recieve">Recibir envío\nde dinero</string>
    <string name="home_account_label">Cuenta</string>
    <string name="home_guardadito">Guardadito Digital</string>
    <string name="home_bankBottomNote">Producto de <b>Banco Azteca</b></string>
    <string name="profile_name">Nombre</string>
    <string name="profile_account">Cuenta</string>
    <string name="profile_open_date">Fecha de apertura</string>
    <string name="profile_phone">Celular</string>
    <string name="profile_email">Correo electrónico</string>
    <string name="profile_contract"><u>Contrato y legales</u></string>
    <string name="contracts_lable_title">Contratos y Legales</string>
    <string name="settings_change_recovery_pass">Cambio o recuperación de contraseña</string>
    <string name="settings_help">Ayuda</string>
    <string name="settings_logout">Cerrar sesión</string>
    <string name="movements_header_label">Saldos y movimientos</string>
    <string name="movements_show_all">Todos los movimientos</string>
    <string name="movements_details">Detalles de movimiento</string>
    <string name="movements_details_amount">+ %1$s</string>
    <string name="movements_details_date">%1$s</string>
    <string name="movements_details_title">%1$s</string>
    <string name="help_appbar_title">Ayuda</string>
    <string name="help_headline_one_label">¿Necesitas ayuda?</string>
    <string name="help_body_two_label">Comunícate con nosotros al teléfono</string>
    <string name="help_phone_number_label">55 7577 5547</string>
    <string name="help_phone_schedule">Lun-Dom de 9 a 21 hrs</string>
    <string name="help_button">LLAMAR</string>
    <string name="mtcn_type_incorrect_title_label">Operación no realizada.</string>
    <string name="mtcn_type_incorrect_body_label">Comunícate al Centro de Contacto para recibir ayuda: 5554478868 opción 1.</string>
    <string name="mtcn_type_incorrect_button_label">ACEPTAR</string>
    <string name="menu_bottom_nav_tittle_1">Inicio</string>
    <string name="menu_bottom_nav_tittle_2">Perfil</string>
    <string name="menu_bottom_nav_tittle_3">Avisos</string>
    <string name="menu_bottom_nav_tittle_4">Ajustes</string>
    <string name="content_description_appbar_logo">Imagen de logo Elektra pagos para appbar</string>
    <string name="content_description_back_button">Boton de imagen para volver atras en appbar</string>
    <string name="content_description_main_icon_on_view">Imagen principal en la vista con referencia a la funcionalidad principal</string>
</resources>