<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/startButton"
        android:enabled="true"
        android:icon="@drawable/ic_home_bottom_button"
        android:title="@string/menu_bottom_nav_tittle_1"/>
    <item
        android:id="@+id/profileButton"
        android:enabled="true"
        android:icon="@drawable/ic_profile_bottom_button"
        android:title="@string/menu_bottom_nav_tittle_2"/>
    <item
        android:id="@+id/noticeButton"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_bottom_button"
        android:title="@string/menu_bottom_nav_tittle_3"/>
    <item
        android:id="@+id/settingsButton"
        android:enabled="true"
        android:icon="@drawable/ic_settings_bottom_button"
        android:title="@string/menu_bottom_nav_tittle_4"/>
</menu>