<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.idiandroid.elektrapagos.EKPHome.view.HomeHelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:background="@color/elektra_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">

                <ImageButton
                    android:id="@+id/backAppbarButton"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/ic_appbar_back_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_description_back_button" />

                <TextView
                    android:id="@+id/sectionTitleAppbarTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_appbar_title"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:theme="@style/appbar_title"
                    android:layout_marginStart="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/backAppbarButton"
                    app:layout_constraintEnd_toStartOf="@id/logoAppBar"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/logoAppBar"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:background="@drawable/ic_appbar_logo"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/content_description_appbar_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/helpIconImageView"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_59sdp"
                    android:background="@drawable/ic_help_image"
                    android:layout_marginTop="@dimen/_40sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/content_description_main_icon_on_view" />

                <TextView
                    android:id="@+id/helpHeadlineOneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_headline_one_label"
                    android:theme="@style/title_1"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:layout_constraintTop_toBottomOf="@+id/helpIconImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/helpBodyTwoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_body_two_label"
                    android:theme="@style/body_1"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/helpHeadlineOneTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/helpPhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_phone_number_label"
                    android:theme="@style/title_1"
                    android:layout_marginTop="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@+id/helpBodyTwoTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/helpPhoneScheduleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_phone_schedule"
                    android:theme="@style/subtitle_1"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/helpPhoneTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/helpCallButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help_button"
                    android:theme="@style/bottom_button"
                    android:layout_marginTop="@dimen/_150sdp"
                    android:layout_marginEnd="@dimen/_65sdp"
                    android:layout_marginStart="@dimen/_65sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@+id/helpPhoneScheduleTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>